# Haskell-Programming-From-First-Principles

./: .gitignore  Chapter2.hs  README.md
Chapter2/: FunctionWithWhere.hs  learn.hs
Chapter3/: chapter3.hs  print2.hs  print3.hs  print3flipped.hs  topOrLocal.hs
Chapter4/: chapter4.hs
Chapter5/: chapter5.hs
Chapter6/: chapter6.hs
ch02/: ch2.hs
ch04/: ch4.hs
ch07/: arith4.hs
ch08/: wordnumber.hs
ch09/: Ciphers.hs  ch9.hs  cipher.hs
ch10/: ch10.hs
ch11/: ch11.hs
ch12/: ch12.hs
ch13/: ch13.hs
ch14/: ch14.hs
ch15/: Madness.hs  ch15.hs
ch15/semigroup-pract/: README.md  semigroup-pract.cabal
ch15/semigroup-pract/src/: Lib.hs
ch16/: ch16.hs
ch17/: ch17.hs
ch17/testingApplicative/: README.md  testingApplicative.cabal
ch17/testingApplicative/src/: Main.hs
ch18/: ch18.hs
ch18/monad-test/: README.md  monad-test.cabal
ch18/monad-test/src/: Main.hs
ch19/: ch19.hs
ch2/: ch2.hs
ch20/: ch20.hs
ch21/: ch21.hs
ch21/traversable-test/: README.md  traversable-test.cabal
ch21/traversable-test/src/: Main.hs
ch22/: ch22.hs
ch23/: ch23.hs
ch23/state-test/: state-test.cabal
ch23/state-test/src/: ChapterExercises.hs  Fizzbuzz.hs  RandomExample.hs  RandomExample2.hs
ch24/: ch24.hs
ch24/parser-tests/: README.md  parser-tests.cabal
ch24/parser-tests/src/: AltParsing.hs  BT.hs  LearnParsers.hs  LogEx.hs  Marshalling.hs
ch24/parser-tests/src/Data/: Ini.hs
ch24/parser-tests/src/Exercises/: Exercises.hs  IPv.hs  LogEx.hs
ch24/parser-tests/src/Text/: Fractions.hs
ch25/: ch25.hs
ch26/: ch26.hs  fix-the-code.hs
ch26/Morra/: CHANGELOG.md  Morra.cabal  package.yaml  stack.yaml
ch26/Morra/app/: Main.hs
ch26/Morra/src/: Lib.hs
ch27/: ch27.hs
ch28/: ch28.hs
ch28/bench/: CHANGELOG.md  bench.cabal  loci.ps  package.yaml
ch28/bench/app/: Main.hs  ProfilingTime.hs  loci.hs
ch28/cafs/: cafs.hs
ch28/ddlist/: CHANGELOG.md  ddlist.cabal  package.yaml  stack.yaml
ch28/ddlist/app/: Main.hs
ch3/: reverse.hs
ch31/fingerd/: fingerd.cabal  stack.yaml
ch31/fingerd/src/: Debug.hs
ch6/: ch6.hs
ch7/: ch7.hs  regUsr1.hs  regUsr2.hs
ch8/: ch8.hs
ch9/: ch9.hs
