name:                semigroup-pract
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/semigroup-pract#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      ,QuickCheck
  default-language:    Haskell2010
