name:                state-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/state-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  hs-source-dirs:      src
  exposed-modules:     RandomExample
                     , RandomExample2
  build-depends:       base >= 4.7 && < 5
                     , random
                     , transformers
  default-language:    Haskell2010

